<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RequestModalActivity">

    <LinearLayout
        android:id="@+id/ll_request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_request_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/request_modal_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/cv_request_title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_request_title"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_request_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cv_request_title_divider"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#eee"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <com.chronosystems.nearbyapp.components.RoundedImageView
            android:id="@+id/iv_request_profile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:src="@null"
            app:paintBorder="true" />

        <TextView
            android:id="@+id/tv_request_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_request_subtitle"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/tv_request_subtitle"
            android:text="@string/request_name"
            android:textColor="#040404"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/tv_request_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_request_name"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_request_profile"
            android:text="@string/request_message"
            android:textColor="#343434"
            android:textSize="12sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <View
        android:id="@+id/cv_request_action_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_request_session"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_request_session"
        android:layout_toEndOf="@+id/cv_request_action_divider"
        android:layout_toRightOf="@+id/cv_request_action_divider"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:touchscreenBlocksFocus="true"
        android:weightSum="1">

        <Button
            android:id="@+id/bt_request_cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_bt_action"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/request_cancel"
            android:textColor="#02A8F3"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/bt_request_confirm_action"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_bt_action"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/request_confirm"
            android:textColor="#02A8F3"
            android:textStyle="bold|italic" />

    </LinearLayout>

</RelativeLayout>
